[package]
name = "noderunr"
version = "26.3.25"
authors = ["NodΞRunr by aBitSuite (https://x.com/L1Runr)"]
description = "NodΞRunr is a lightweight FOSS smart daemon that provides effortless SysOps for Avalanche L1 node operators."
homepage = "https://L1.run"
repository = "https://github.com/abitsuite/noderunr"
categories = ["blockchain", "cryptocurrency"]
keywords = ["avalanche", "blockchain", "validator", "node-operator", "devops"]
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "noderunr"
path = "src/noderunr.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
human-panic = "2.0.2"
indicatif = "0.17.1"
portable-pty = "0.8"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
predicates = "3.1.3"
